@@ -1,3 +1,8 @@
+2012-08-16	The InnoDB Team
+
+	* btr/btr0cur.c, page/page0page.c:
+	Fix Bug#13523839 ASSERTION FAILURES ON COMPRESSED INNODB TABLES
+
 2012-08-07	The InnoDB Team
 
 	* btr/btr0pcur.c, row/row0merge.c:
